# robocopy

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/py_robocopy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/robocopy/: main.py  robocopy.py
