[project]
name = "py-robocopy"
version = "0.0.5"
authors = [
  { name="Suyash Sonkesaria", email="suyashsonkesaria@gmail.com" },
]
description = "Copies file data from one location to another."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Microsoft :: Windows",
    "Operating System :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/suyashsonkesaria/robocopy"
"Bug Tracker" = "https://github.com/suyashsonkesaria/robocopy/issues"
